# projectBank

build-project1-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  data.db
build-project1-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-0a87bc85b0587dc88784.json  cache-v2-c2c0ecafe9b28b891b58.json  (+17 more)
build-project1-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-4622fcdd52da4bd76c23.json  codemodel-v2-e36386b27417a5771d4f.json  codemodel-v2-fcf99f62e50ce58100f7.json  index-2023-05-14T09-28-21-0142.json  index-2023-05-14T09-28-51-0547.json  target-project1-Debug-422a01b0a0dff3411f59.json  target-project1-Debug-c6be89d599d213e11773.json  target-project1_autogen-Debug-aca2fe54200066195835.json  target-project1_autogen_timestamp_deps-Debug-46dab9d7b8084e3f47d5.json
build-project1-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-project1-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-project1-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/project1_autogen/: deps  mocs_compilation.cpp
build-project1-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/project1_autogen/EWIEGA46WW/: moc_adminpanel.cpp  moc_adminpanel.cpp.d  moc_balance.cpp  moc_balance.cpp.d  moc_bills.cpp  moc_bills.cpp.d  moc_credit.cpp  moc_credit.cpp.d  moc_curr.cpp  moc_curr.cpp.d  moc_database.cpp  moc_database.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_mbox.cpp  moc_mbox.cpp.d  moc_pay.cpp  moc_pay.cpp.d  moc_payw.cpp  moc_payw.cpp.d  moc_registration.cpp  moc_registration.cpp.d  moc_sec.cpp  moc_sec.cpp.d  moc_secondwindow.cpp  moc_secondwindow.cpp.d  moc_sign.cpp  moc_sign.cpp.d
build-project1-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/project1_autogen/include/: ui_adminpanel.h  ui_balance.h  ui_bills.h  ui_credit.h  ui_curr.h  ui_database.h  ui_mainwindow.h  ui_mbox.h  ui_pay.h  ui_payw.h  ui_registration.h  ui_sec.h  ui_secondwindow.h  ui_sign.h
build-project1-Desktop_Qt_6_5_0_MinGW_64_bit-Profile/: qtcsettings.cmake
build-project1-Desktop_Qt_6_5_0_MinGW_64_bit-Release/: qtcsettings.cmake
project1/: CMakeLists.txt  adminpanel.cpp  adminpanel.h  adminpanel.ui  balance.cpp  balance.h  balance.ui  bills.cpp  bills.h  bills.ui  credit.cpp  credit.h  credit.ui  curr.cpp  curr.h  curr.ui  database.cpp  database.h  database.ui  library.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  mbox.cpp  mbox.h  mbox.ui  payw.cpp  payw.h  payw.ui  registration.cpp  registration.h  registration.ui  resources.qrc  sec.cpp  sec.h  sec.ui  sign.cpp  sign.h  (+1 more)
(+463 files in other folders)
